feat: Refactor comment and post handling, add role management, and enhance DTO support
- Replace `UserRole` enum with `Role` entity and integrate it into the account system for improved role-based functionality.
- Introduce new DTOs (`CommentResponseDto`, `PostResponseDto`, `RoleResponseDto`, `AccountResponseDto`) for better response handling.
- Refactor `CommentService` and `PostService` methods to return response DTOs.
- Update security configurations to support role-based authorization and initialize default roles during application startup.
- Improve entity design by adding essential getters and modifying relationships (e.g., `Account` and `Role` association).
- Simplify repository methods for enhanced readability and maintainability.